# Configuring metadata

# There are two types of metadata: static and dynamic.
#  Static metadata (setup.cfg): guaranteed to be the same every time.
#    This is simpler, easier to read, and avoids many common errors, like encoding errors.
#  Dynamic metadata (setup.py): possibly non-deterministic.
#    Any items that are dynamic or determined at install-time, as well as extension modules or extensions to setuptools, need to go into setup.py.
# Static metadata (setup.cfg) should be preferred.
#    Dynamic metadata (setup.py) should be used only as an escape hatch
#    when absolutely necessary. setup.py used to be required, but can
#    be omitted with newer versions of setuptools and pip.
[metadata]
name = RetroFit_FeatureEngineering
version = 0.0.1
author = Adrian Antico
author_email = adrianantico@gmail.com
description = Feature engineering functions for modeling. Package utilizes polars for extremely fast processing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdrianAntico/RetroFit_FeatureEngineering
project_urls =
    Bug Tracker = https://github.com/AdrianAntico/RetroFit_FeatureEngineering/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
