[metadata]
name = RetroFit
version = 0.0.1
author = Adrian Antico
author_email = adrianantico@gmail.com
license_file = LICENSE
description-file = README.md
description = AutoML, Forecasting, NLP, Image Classification, Feature Engineering, Model Evaluation, Model Interpretation, Fast Processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdrianAntico/RetroFit
project_urls =
    Bug Tracker = https://github.com/AdrianAntico/RetroFit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MPL 2.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
