[metadata]
name = retrofit
version = 0.3.0
description = High-Performance ML Training, Scoring & Evaluation (Polars + GPU-Ready)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdrianAntico/retrofit
author = Adrian Antico, Sean Benner
author_email = adrianantico@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
install_requires =
    polars
    pandas
    numpy
    scipy
    catboost
    xgboost
    lightgbm
    QuickEcharts
    PolarsFE
    pyarrow
    scikit-learn
    jinja2
include_package_data = True

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
retrofit =
    images/*.png
    images/*.PNG
    images/*.jpg
    images/*.jpeg
    images/*.svg
